--- a/first-app/src/components/Navbar/Navbar.module.css
+++ b/first-app/src/components/Navbar/Navbar.module.css
@@ -1,10 +1,13 @@
 .nav{
     grid-area: n;
     background-color: cadetblue;
+    padding:25px;
   }
-.item{
+.item {
     color:white;
+    text-decoration: none;
 }
-.item.active{
-  color: red;
+.item a.active{
+  color: black;
+  text-decoration: none;
 }
